# eciassistant

./: .gitignore  README.md  cloudbuild.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: chat.py  content.py  feedback.py
backend/app/middleware/: logging.py  security.py
backend/app/models/: request.py  response.py
backend/app/services/: gemini.py  rag.py  session.py  translate.py
backend/tests/: conftest.py
backend/tests/security/: test_injection.py
backend/tests/unit/: test_chat.py  test_content.py  test_security.py  test_session.py
frontend/: .env.example  .firebaserc  index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatPanel.tsx  Glossary.tsx  LanguagePicker.tsx  PhaseCard.tsx  Timeline.tsx
frontend/src/hooks/: useChat.ts  useSession.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
infra/: cloud_armor.tf  cloud_run.tf  firestore.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
prompts/: system-prompt.txt
